--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -58,7 +58,11 @@ body {
   width: 100%;
   max-width: 68rem;
   margin: 0 auto;
-  font: 1.6rem/1.25 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:
+    1.6rem/1.25 "Helvetica Neue",
+    Helvetica,
+    Arial,
+    sans-serif;
   background-color: #f5f5f5;
   color: #4d4d4d;
   -moz-osx-font-smoothing: grayscale;
